--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "buffer": "^5.5.0",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
-  }
+  },
+  "homepage": "https://tomgb.github.io/Stage/"
 }
