--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "last 1 safari version"
   ],
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.8.3",
+    "@parcel/transformer-webmanifest": "^2.8.3",
     "buffer": "^5.5.0",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
