--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@contentful/f36-spinner": "^4.25.1",
     "@contentful/rich-text-react-renderer": "^15.19.6",
+    "axios": "^1.6.8",
     "contentful": "^10.8.8",
     "contentful-import": "^8.5.23",
     "dotenv": "^16.0.3",
