--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "swr": "^2.0.1"
   },
   "scripts": {
-    "dev": "parcel ./public/index.html --open",
-    "build": "parcel build ./public/index.html --public-url './'",
+    "dev": "parcel ./public/index.html --open --dist-dir devBuild",
+    "build": "parcel build ./public/index.html --public-url './' --dist-dir dist",
     "setup": "node ./contentful/setup.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
