--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "contentful-import": "^8.5.23",
     "dotenv": "^16.0.3",
     "gh-pages": "^6.1.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
