--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "parcel build ./public/index.html --public-url './' --dist-dir dist",
     "setup": "node ./contentful/setup.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist --cname 'stagecoffee.com'"
   },
   "browserslist": [
     "last 1 chrome version",
